<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_courses"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_courses" />

    <item
        android:id="@+id/nav_my_courses"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_my_courses" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />

    <item
        android:id="@+id/nav_admin"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_admin"
        android:visible="false" />

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/logout" />
    </group>

</menu>